# Rpi--Mirror

./: CMakeLists.txt  addplugin.py  main.cpp  resources.qrc
Plugins/: CMakeLists.txt
Plugins/Disney/: index.html
Plugins/Info/: index.html
Plugins/Netflix/: index.html
Plugins/Prime/: index.html
Plugins/Youtube/: index.html
qml/: main.qml  plugins.qml  resources.qrc
qml/plugs/: Listviewer.qml  Plugins.qml
